React OK e atualizado

--- a/portfolio-react-vite/src/App.css
+++ b/portfolio-react-vite/src/App.css
@@ -1,6 +1,35 @@
-/* src/App.css */
-
+html,
+body,
 #root {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+}
+
+.layout {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.route-content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  /* centraliza horizontalmente */
+  align-items: center;
+  /* centraliza verticalmente */
+  height: calc(100vh - 60px);
+  /* 60px = altura do header */
 }
