--- a/portfolio-react-vite/src/components/sidebar.module.css
+++ b/portfolio-react-vite/src/components/sidebar.module.css
@@ -1,21 +1,8 @@
 /* src/components/sidebar.module.css */
 
-/* .sidebar {
-  width: 220px;
-  background-color: #ffffff;
-  border-right: 1px solid #ddd;
-  height: 100vh;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  position: sticky;
-  top: 0;
-} */
-
 .sidebar {
-  width: 72px;
-  background-color: #f5f3f1;
+  width: 62px;
+  background-color: #F7F5F3;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -34,7 +21,7 @@
 .nav {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .nav a {
@@ -54,7 +41,80 @@
 }
 
 .active {
-  background-color: #e0f2f1;
-  color: #00796b;
+  /* background-color: #e0f2f1; */
+  /* background-color: #e0dfdd; */
+  background-color: #EAE9E7;
+  border-radius: 50%;
+  /* color: #00796b; */
   font-weight: 600;
+  /* color: #0A0A0A */
+}
+
+.nav a span {
+  display: none;
+}
+
+.topIcons,
+.bottomIcons {
+  display: flex;
+  flex-direction: column;
+  /* gap: 24px; */
+  gap: 12px;
+  align-items: center;
+}
+
+.hr1 {
+  width: 100%;
+  /* height: 1px; */
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-color: #DEDCDA;
+  /* background-color: #ddd; */
+}
+
+.hr2 {
+  width: 75%;
+  /* height: 1px; */
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-color: #DEDCDA;
+  /* background-color: #ddd; */
+}
+
+.iconButton {
+  color: #5E5D5C;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  transition: background-color 0.3s, color 0.3s;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.iconButton:hover {
+  background-color: #EAE9E7;
+  color: #0a0a0a;
+}
+
+.active {
+  background-color: #EAE9E7;
+  color: #0a0a0a !important;
+}
+
+.avatarWrapper {
+  margin-top: 16px;
+}
+
+.avatarWrapper img {
+  border-radius: 50%;
+  border: 2px solid #fff;
 }
