--- a/portfolio-react-vite/src/layouts/layout.module.css
+++ b/portfolio-react-vite/src/layouts/layout.module.css
@@ -11,7 +11,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  /* era flex-start */
   background-color: #f9f9f9;
   overflow-x: hidden;
 }
@@ -19,8 +20,7 @@
 .content {
   flex-grow: 1;
   width: 100%;
-  max-width: 1024px;
-  padding: 1rem;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
