--- a/portfolio-react-vite/src/components/header.module.css
+++ b/portfolio-react-vite/src/components/header.module.css
@@ -18,3 +18,12 @@
   font-weight: bold;
   z-index: 10;
 }
+
+.title {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: rgb(10, 10, 10);
+  /* Ou #0a0a0a */
+  line-height: 28px;
+}
