--- a/portfolio-react-vite/src/components/WhatsAppPhone/BootScreen.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/BootScreen.css
@@ -1,436 +1,39 @@
 /* src/components/BootScreen.css */
 
-.boot-screen {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 1s ease;
-  overflow: hidden;
-
-  border-radius: 42px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  margin: -10px -5px -10px -10px;
-}
-
-.boot-screen.black {
-  background-color: #000;
-  /* background-color: #fff; */
-}
-
-.boot-screen.logo {
-  background-color: #000;
-  /* flex-direction: column; */
-  font-size: 60px;
-  color: #fff;
-  justify-content: space-between;
-  align-items: center;
-  /* padding: 30% 0; */
-  height: 100%;
-  /* Garante que ocupe toda a altura disponível */
-  /* padding: 50% 0; */
-  /* Reduz o padding vertical para melhor distribuição */
-}
-
-.boot-screen.logo .logo {
-  margin-bottom: auto;
-  margin-top: 250px;
-}
-
-.boot-screen.logo .android {
-  margin-bottom: 12%;
-}
-
-.boot-screen.android {
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  /* Garante que o container ocupe toda a altura */
-}
-
-.boot-screen.android img {
-  /* width: 60px !important; */
-  /* Força o tamanho */
-  height: auto !important;
-  object-fit: contain !important;
-  max-width: 100% !important;
-  /* Evita que a imagem ultrapasse o container */
-}
-
-/* Se existir alguma outra regra afetando a imagem, podemos ser mais específicos */
-.boot-screen.logo .android {
-  margin-top: auto;
-  width: 90px !important;
-  height: auto !important;
-}
-
-.boot-screen.wallpaper {
-  /* background-image: url('/src/assets/wallpaper.jpg'); */
-  background-size: cover;
-  background-position: center;
-  flex-direction: column;
-  color: white;
-  font-family: 'system-ui', sans-serif;
-  padding-top: 40px;
-  position: relative;
-}
-
-.boot-screen.wallpaper .clock {
-  font-size: 52px;
-  font-weight: 300;
-}
-
-.boot-screen.wallpaper .date {
-  font-size: 18px;
-  margin-top: 4px;
-}
-
-.boot-screen.wallpaper .app-icons {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-top: auto;
-  padding-bottom: 48px;
-}
-
-.boot-screen.wallpaper .icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 48px;
-  color: white;
-  cursor: pointer;
-}
-
-.boot-screen.wallpaper .icon span {
-  font-size: 14px;
-  margin-top: 6px;
-}
-
-/* Styles Module - Celular */
-
-/* src/components/WhatsAppPhone/styles.module.css */
-.phoneContainer {
-  position: relative;
-  width: 300px;
-  height: 550px;
-  background: url('/phone_037.png') no-repeat center center;
-  background-size: contain;
-  padding: 65px 15px;
-  filter: drop-shadow(0 10px 30px rgba(0, 0, 0, 0.2));
-  margin: 0 auto;
-}
-
-.whatsappScreen {
-  /* background: url('/background.jpeg'); */
-  /* background: url('/wallpaper.jpg') no-repeat center center; */
-  background-color: #000;
-  /* background-repeat: repeat; */
-  /* background-size: contain; */
+.boot-wrapper {
   height: calc(100% + 96px);
   width: calc(100% - 7px);
-  border-radius: 42px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  border-radius: 42px;
   padding: 10px;
   margin: -58px -5px -5px -6px;
 }
 
-.messages {
-  font-size: 14px;
-  flex-grow: 1;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-}
-
-.message {
-  border-radius: 7px;
-  padding: 8px 35px 8px 8px;
-  margin-bottom: 1px;
-  max-width: 80%;
-  width: fit-content;
-  position: relative;
-}
-
-.sent {
-  background: #d8fdd2;
-  align-self: flex-end;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.received {
-  background: #ffffff;
-  align-self: flex-start;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.first.sent::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: -8px;
-  width: 0;
-  height: 0;
-  border-left: 8px solid #d8fdd2;
-  border-top: 8px solid transparent;
-}
-
-.first.received::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -8px;
-  width: 0;
-  height: 0;
-  border-right: 8px solid #ffffff;
-  border-top: 8px solid transparent;
-}
-
-.messageTime {
-  font-size: 10px !important;
-  color: #667781;
-  position: absolute;
-  bottom: 4px;
-  right: 6px;
-  line-height: 1;
-}
-
-.inputArea {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 35px;
-}
-
-.inputArea input {
-  flex-grow: 1;
-  border-radius: 20px;
-  border: none;
-  padding: 10px;
-  outline: none;
-  font-size: 15px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
-}
-
-.inputArea button {
-  border: none;
-  border-radius: 50%;
-  color: white;
-  width: 38px;
-  height: 38px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-}
-
-.sendIcon {
-  width: 55px;
-  height: 55px;
-}
-
-.whatsappHeader {
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
-  padding: 10px;
-  margin: -10px -10px 10px -10px;
-  border-top-left-radius: 42px;
-  border-top-right-radius: 42px;
-}
-
-.statusBar {
-  display: flex;
-  justify-content: space-between;
-  font-size: 12px;
-  margin-bottom: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.systemIcons {
-  display: flex;
-  gap: 5px;
-}
-
-.chatHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.contactInfo {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.avatar img {
-  width: 100%;
+.logo-screen {
   height: 100%;
-  object-fit: cover;
-}
-
-.contactDetails {
+  width: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.contactName {
-  font-weight: normal;
-}
-
-.onlineStatus {
-  font-size: 12px;
-  opacity: 0.8;
-}
-
-.chatActions {
-  display: flex;
-  gap: 15px;
-  font-size: 18px;
+  justify-content: space-between;
   align-items: center;
+  padding: 90% 0 15% 0;
+  /* Ajusta espaçamento vertical */
 }
 
-.actionIcon {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  opacity: 0.9;
-  transition: opacity 0.3s ease;
-}
-
-.actionIcon:hover {
-  opacity: 1;
-}
-
-.videoIcon {
-  width: 24px;
-  height: 24px;
-}
-
-.androidNavigation {
-  background-color: #ffffff;
-  position: absolute;
-  bottom: 7px;
-  left: calc(50% + 0.5px);
-  transform: translateX(-50%);
-  display: flex;
-  gap: 40px;
-  align-items: center;
-  width: calc(100% - 17.5px);
-  height: 40px;
-  justify-content: center;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
-}
-
-.navButton {
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.navButton:hover {
-  color: rgba(0, 0, 0, 0.8);
-}
-
-.navIcon {
-  width: 22px;
-  height: 22px;
-  opacity: 0.6;
-  transition: opacity 0.3s ease;
-}
-
-.navButton:hover .navIcon {
-  opacity: 0.8;
-}
-
-/* .navButton i.fa-square { */
-.navButton :global(i.fa-square) {
-  font-size: 17px;
-}
-
-
-.navButton :global(i.fa-caret-left) {
-  font-size: 25px;
-}
-
-.time {
-  font-size: 12px;
-}
-
-.loginBackground {
-  background-color: rgba(54, 145, 237, 0.95);
-  height: calc(100% + 95px);
-  width: calc(100% + 2px);
-  border-radius: 42px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  margin: -10px 0px -11px -11px;
-}
-
-.loginScreen {
-  padding: 20px;
-  text-align: center;
-  margin-top: 160px;
-  background-color: rgba(255, 255, 255, 0.95);
-  border-radius: 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.loginScreen h3 {
-  color: #075E54;
-  margin-bottom: 20px;
-  font-size: 24px;
-}
-
-.loginScreen input {
-  width: 90%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border-radius: 8px;
-  border: 1px solid #ddd;
-  font-size: 14px;
-  transition: border-color 0.3s ease;
-}
-
-.loginScreen input:focus {
-  border-color: #25D366;
-  outline: none;
-}
-
-.loginScreen button {
-  padding: 12px 30px;
-  background: #25D366;
+.logo-icon {
+  font-size: 60px;
+  /* font-size: 48px; */
   color: #fff;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
+  /* color: #ff6700; */
 }
 
-.loginScreen button:hover {
-  background: #128C7E;
+.android {
+  width: 100px;
+  /* height: 90px; */
+  /* opacity: 0.7; */
+  /* margin-bottom: 12%; */
 }
