--- a/portfolio-react-vite/src/components/WhatsAppPhone/BootScreen.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/BootScreen.css
@@ -10,7 +10,17 @@
   background-color: #000;
   border-radius: 42px;
   padding: 10px;
-  margin: -58px -5px -5px -6px;
+  margin: -58px -5px -58px -6px;
+}
+
+.boot-screen {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 90% 0 15% 0;
 }
 
 .logo-screen {
