--- a/portfolio-react-vite/src/components/WhatsAppPhone/LoginPhone.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/LoginPhone.css
@@ -10,18 +10,18 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin: -58px -5px -58px -5px;
+  margin: -58px -5px -68px -5px;
 }
 
 .loginBackground {
-  background-color: rgba(54, 145, 237, 0.95);
+  /* background-color: rgba(54, 145, 237, 0.95); */
   height: calc(100% + 95px);
   width: calc(100% + 2px);
   border-radius: 42px;
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin: -10px 0px -11px -11px;
+  margin: -10px 0px -56px -11px;
 }
 
 .loginScreen {
@@ -67,4 +67,13 @@
 
 .loginScreen button:hover {
   background: #128C7E;
+}
+
+.navigationBar.loginNavigationBar {
+  margin-bottom: 10px;
+  /* padding-bottom: -30px; */
+}
+
+.loginStatusBar {
+  margin-top: 5px;
 }
