--- a/portfolio-react-vite/src/components/WhatsAppPhone/WhatsAppSplash.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/WhatsAppSplash.css
@@ -1,33 +1,59 @@
 /* src/components/WhatsAppPhone/WhatsAppSplash.css */
 
+.splashStatusBar {
+  margin: -24px 0px -20px 0px;
+}
+
 .whatsappSplash {
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: white;
+  /* background-color: blue; */
+
+  padding: 30px 18px;
+  height: calc(100% + 56px);
+  width: calc(100% - 23px);
+  border-radius: 42px;
+  margin: -58px -5px -58px -6px;
+  pointer-events: auto;
+  z-index: -1;
 }
 
 .splashContent {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center;
+  align-items: center; */
+  justify-content: space-between;
   align-items: center;
+  padding-bottom: 30px;
 }
 
 .whatsappIcon {
+  margin-top: auto;
   width: 70px;
   height: 70px;
   margin-bottom: 20px;
+  color: #25D366;
 }
 
 .fromMeta {
   font-size: 14px;
-  color: #555;
+  /* color: #555; */
+  color: #899198;
+  line-height: 1.8;
+  text-align: center;
+  width: 100%;
+  /* justify-content: center;
+  align-items: center; */
+  margin-top: auto;
 }
 
-.fromMeta span {
-  color: #25d366;
-  font-weight: bold;
+.fromMeta img {
+  width: 70px;
+  /* Filtro para converter para a cor verde do WhatsApp */
+  filter: invert(67%) sepia(64%) saturate(561%) hue-rotate(93deg) brightness(95%) contrast(98%);
 }
