--- a/portfolio-react-vite/src/components/WhatsAppPhone/LoginPhone.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/LoginPhone.css
@@ -1,27 +1,43 @@
 /* src/components/WhatsAppPhone/LoginPhone.css */
 
+.loginStatusBar {
+  /* margin-top: 5px; */
+  margin: -24px 0px -20px 0px;
+}
+
 .whatsappScreen {
+  position: relative;
   /* background: url('/background.jpeg'); */
   /* background-repeat: repeat; */
   /* background-size: contain; */
-  height: calc(100% + 95px);
+  display: flex;
+  /* height: calc(100% + 95px);
   width: calc(100% - 9px);
   border-radius: 42px;
-  display: flex;
   flex-direction: column;
-  padding: 10px;
   margin: -58px -5px -68px -5px;
+  padding: 10px; */
+
+  height: calc(100% + 56px);
+  width: calc(100% - 23px);
+  flex-direction: column;
+  /* justify-content: space-between; */
+  padding: 30px 18px;
+  border-radius: 42px;
+  margin: -58px -5px -58px -6px;
+  pointer-events: auto;
+  z-index: -1;
 }
 
 .loginBackground {
   /* background-color: rgba(54, 145, 237, 0.95); */
-  height: calc(100% + 95px);
+  /* height: calc(100% + 95px);
   width: calc(100% + 2px);
-  border-radius: 42px;
+  border-radius: 42px; */
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin: -10px 0px -56px -11px;
+  /* margin: -10px 0px -56px -11px; */
 }
 
 .loginScreen {
@@ -69,11 +85,7 @@
   background: #128C7E;
 }
 
-.navigationBar.loginNavigationBar {
+/* .navigationBar.loginNavigationBar {
   margin-bottom: 10px;
-  /* padding-bottom: -30px; */
-}
-
-.loginStatusBar {
-  margin-top: 5px;
-}
+  padding-bottom: -30px;
+} */
