--- a/portfolio-react-vite/src/components/WhatsAppPhone/WhatsAppPhone.css
+++ b/portfolio-react-vite/src/components/WhatsAppPhone/WhatsAppPhone.css
@@ -1,5 +1,9 @@
 /* src/components/WhatsAppPhone/WhatsAppPhone.css */
 
+.whatsStatusBar {
+  margin: -41px 7px 0px 7px;
+}
+
 .whatsappScreen {
   background: url('/background.jpeg');
   background-repeat: repeat;
@@ -16,8 +20,8 @@
 .whatsappHeader {
   background-color: #ffffff;
   color: rgb(0, 0, 0);
-  padding: 25px 10px 10px 10px;
-  margin: -10px -10px 10px -10px;
+  padding: 45px 10px 10px 10px;
+  margin: -28px -17px 10px -17px;
   border-top-left-radius: 42px;
   border-top-right-radius: 42px;
 }
@@ -190,13 +194,15 @@
 
 /* Estilos específicos para a navigationBar do WhatsApp */
 .navigationBar.whatsappNavigationBar {
-  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  /* margin-top: 10px; */
   background-color: white;
-  border-bottom-left-radius: 42px;
-  border-bottom-right-radius: 42px;
-  /* border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px; */
-  /* padding-bottom: 10px; */
-  padding: 0px 10px 0px 10px;
-  margin: -10px -6px -58px -5px;
+  /* height: 45px; */
+  /* border-bottom-left-radius: 42px;
+  border-bottom-right-radius: 42px; */
+  /* padding-bottom: 20px; */
+  /* padding: 0px -10px 0px -10px; */
+  padding: 0px 5px 17px 5px;
+  margin: 0px 0px -80px 0px;
 }
